--- a/_includes/header.html
+++ b/_includes/header.html
@@ -10,27 +10,27 @@
         <link rel="stylesheet" href="/css/syntax.css">
 
         <!-- Custom CSS -->
-        <link rel="stylesheet" href="/css/jquery.fancybox-1.3.4.css"/>
-        <link rel="stylesheet" href="/css/main.css">
-        <link rel="stylesheet" href="/css/style.css" />
-        <link rel="stylesheet" href="/css/epicfullscreen.css" />
-        <link rel="stylesheet" href="/css/udt_shortcodes.css" />
-        <link rel="stylesheet" href="/css/udt_media_queries.css" />
+        <link rel="stylesheet" href="{{ site.baseurl}}/css/jquery.fancybox-1.3.4.css"/>
+        <link rel="stylesheet" href="{{ site.baseurl}}/css/main.css">
+        <link rel="stylesheet" href="{{ site.baseurl}}/css/style.css" /> 
+        <link rel="stylesheet" href="{{ site.baseurl}}/css/epicfullscreen.css" />
+        <link rel="stylesheet" href="{{ site.baseurl}}/css/udt_shortcodes.css" />
+        <link rel="stylesheet" href="{{ site.baseurl}}/css/udt_media_queries.css" />
         <link href='http://fonts.googleapis.com/css?family=Open+Sans:400,800' rel='stylesheet' type='text/css' />
         <link href='http://fonts.googleapis.com/css?family=Quicksand' rel='stylesheet' type='text/css' />
     
         <!-- Javascript -->
         <script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js"></script>
         <script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jqueryui/1.8.9/jquery-ui.min.js"></script>
-        <script type="text/javascript" src="/js/jquery.mobile-touch-swipe-1.0.js"></script>
-        <script type="text/javascript" src="/js/jquery.lazyload.js"></script>
-        <script type="text/javascript" src="/js/jquery.epicfullscreen.js"></script>
-        <script type="text/javascript" src="/js/waypoints.min.js"></script>   
-        <script type="text/javascript" src="/js/jquery.parallax-1.1.3.js"></script>
-        <script type="text/javascript" src="/js/onepage.js"></script>
-        <script type="text/javascript" src="/js/jquery.fancybox-1.3.4.pack.js"></script>
-        <script type="text/javascript" src="/js/common.js"></script>
-        <script type="text/javascript" src="/js/subscribe.js"></script>        
+        <script type="text/javascript" src="{{ site.baseurl}}/js/jquery.mobile-touch-swipe-1.0.js"></script>
+        <script type="text/javascript" src="{{ site.baseurl}}/js/jquery.lazyload.js"></script>
+        <script type="text/javascript" src="{{ site.baseurl}}/js/jquery.epicfullscreen.js"></script>
+        <script type="text/javascript" src="{{ site.baseurl}}/js/waypoints.min.js"></script>   
+        <script type="text/javascript" src="{{ site.baseurl}}/js/jquery.parallax-1.1.3.js"></script>
+        <script type="text/javascript" src="{{ site.baseurl}}/js/onepage.js"></script>
+        <script type="text/javascript" src="{{ site.baseurl}}/js/jquery.fancybox-1.3.4.pack.js"></script>
+        <script type="text/javascript" src="{{ site.baseurl}}/js/common.js"></script>
+        <script type="text/javascript" src="{{ site.baseurl}}/js/subscribe.js"></script>        
         <script type="text/javascript" src="//use.typekit.net/two3pcx.js"></script>
         <script type="text/javascript">try{Typekit.load();}catch(e){}</script>
         
