updates to understand this structure

--- a/_includes/header_posts.html
+++ b/_includes/header_posts.html
@@ -72,7 +72,7 @@
       		  <div class="inner">
       			  <div class="logo-pages">
       				  <div class="logo">
-                  <a class="brand" href="/">Rails Bridge LA</a>        				
+                  <a class="brand" href="/">{{site.name}}</a>        				
                 </div>
               </div> <!-- end logo-pages  -->
 
