--- a/_includes/header.html
+++ b/_includes/header.html
@@ -95,7 +95,7 @@
               </div> <!-- end logo-pages  -->
 
               <!--mobileMenu toggle-->
-              <div class="mobileMenuToggle"><a href=""></a></div>
+              <div class="mobileMenuToggle"><a href="/">{{ site.name }}</a></div>
 
               <!--navigation-->
               <ul class="navigation">
