--- a/_includes/header_posts.html
+++ b/_includes/header_posts.html
@@ -72,12 +72,12 @@
       		  <div class="inner">
       			  <div class="logo-pages">
       				  <div class="logo">
-                  <a class="brand" href="/">{{site.name}}</a>        				
+                  <a class="brand" href="/">{{ site.name }}</a>        				
                 </div>
               </div> <!-- end logo-pages  -->
 
               <!--mobileMenu toggle-->
-              <div class="mobileMenuToggle"><a href=""></a></div>
+              <div class="mobileMenuToggle"><a href="/">{{ site.name }}</a></div>
 
               <!--navigation-->
               <ul class="navigation">
