upcommented the plugin files to see if I could get things to work, somehow the 'site.name' variable stopped working

--- a/_includes/header_posts.html
+++ b/_includes/header_posts.html
@@ -77,7 +77,7 @@
               </div> <!-- end logo-pages  -->
 
               <!--mobileMenu toggle-->
-              <div class="mobileMenuToggle"><a href=""></a></div>
+              <div class="mobileMenuToggle"><a href="/">Rails Bridge LA</a></div>
 
               <!--navigation-->
               <ul class="navigation">
