--- a/_includes/header.html
+++ b/_includes/header.html
@@ -90,12 +90,12 @@
       		  <div class="inner">
       			  <div class="logo-pages">
       				  <div class="logo-homepage brand">
-        				  <a class="brand navigateTo" href="#homepage">{{ site.name }}</a>
+        				  <a class="brand navigateTo" href="#homepage">Rails Bridge LA</a>    <!-- {{ site.name }}  -->
         				</div>
               </div> <!-- end logo-pages  -->
 
               <!--mobileMenu toggle-->
-              <div class="mobileMenuToggle"><a href=""></a></div>
+              <div class="mobileMenuToggle"><a href="/">Rails Bridge LA</a></div>      <!-- {{ site.name }}  -->
 
               <!--navigation-->
               <ul class="navigation">
