changed the navigation style t o link to the right files, updated the CSS and updated the blog

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -103,8 +103,10 @@
                 <li><a class="navigateTo" href="#features-1">List of Meetups</a></li>
                 <li><a class="navigateTo" href="#features-2">Mentors</a></li>
                 <li><a class="navigateTo" href="#signup">Sign Up</a></li>
-                <li><a class="navigateTo" href="http://demo.udfrance.com/encore/html/app/blog.html">Blog</a></li>
-                <li><a class="navigateTo" href="http://demo.udfrance.com/encore/html/app/contact.html">Contact</a></li>
+              	
+              	{% capture location %}{{ page.url | remove_first:'/' | split:'/' | first }}{% endcapture %}
+              	<li><a {% if location == 'blog' %}class="active" {% endif %}href="/blog/">Blog</a></li>
+              	<li><a {% if location == 'contact' %}class="active" {% endif %}href="/contact/">Contact</a></li>
               </ul> <!-- end navigation  -->
       		  </div> <!-- end inner  -->
           </div> <!-- end header header-main clearfix -->
