--- a/_includes/header_posts.html
+++ b/_includes/header_posts.html
@@ -72,7 +72,7 @@
       		  <div class="inner">
       			  <div class="logo-pages">
       				  <div class="logo">
-                  <a class="brand" href="/">{{ site.name }}</a>        				
+                  <a class="brand" href="/">Rails Bridge LA</a>        				
                 </div>
               </div> <!-- end logo-pages  -->
 
@@ -85,8 +85,8 @@
                 <li><a class="navigateTo" href="{{ site.baseurl}}/#features-1">List of Meetups</a></li>
                 <li><a class="navigateTo" href="{{ site.baseurl}}/#features-2">Mentors</a></li>
                 <li><a class="navigateTo" href="{{ site.baseurl}}/#signup">Sign Up</a></li>
-                <li><a class="navigateTo active" href="http://demo.udfrance.com/encore/html/app/blog.html">Blog</a></li>
-                <li><a class="navigateTo" href="http://demo.udfrance.com/encore/html/app/contact.html">Contact</a></li>
+                <li><a class="navigateTo active" href="{{ site.baseurl}}/blog">Blog</a></li>
+                <li><a class="navigateTo" href="{{ site.baseurl}}/contact">Contact</a></li>
               </ul> <!-- end navigation  -->
       		  </div> <!-- end inner  -->
           </div> <!-- end header header-main clearfix -->
