updated a style for margin-right but the weird thing was that it did not save it until I forced it at least 3times

--- a/css/udt_shortcodes.css
+++ b/css/udt_shortcodes.css
@@ -51,8 +51,8 @@
 		.column_two_thirds{width:65.3334%;}
 		.column_three_fourths{width:74%;}
 		.last{margin:0; clear:right;}
-		
-		
+		.margin-50-r { margin-right: 50px;}
+    		
 	
 	/*BLOCKQUOES*/	
 		
