--- a/css/main.css
+++ b/css/main.css
@@ -27,7 +27,7 @@ p { margin: 1em 0; }
 
 a         { color: #00a; }
 a:hover   { color: #000; }
-a:visited { color: #FC7022; }
+a:visited { color: #E56869; }
 
 /*****************************************************************************/
 /*
