--- a/css/style.css
+++ b/css/style.css
@@ -111,17 +111,26 @@
 	
 	/*homepage*/
 	.logo-homepage {
-	  width:235px;
-	  height:39px;
+	  width:260px;
+	  height:20px;
 	  margin-bottom:30px;
 	}
-	.logo-homepage .brand, .brand {
+	.logo-homepage .brand, .brand{
 	  font-family: "bello-pro"; 
 	  color: #E56869; 
 	  font-size: 30px;
 	  font-weight: 200;
     text-shadow: 0 2px 2px #222;
   }
+
+  .logo-homepage .home, .home {
+	  font-family: "bello-pro"; 
+	  color: #E56869; 
+	  font-size: 40px;
+	  font-weight: 200;
+    text-shadow: 0 2px 2px #222;
+  }
+  
 	/*inner pages*/
 	.header {
 	  width:100%; 
@@ -180,7 +189,7 @@
 		padding: 5px 10px;
 	}
 	.header .inner ul.navigation li a:hover {
-		color:#fc7022;
+		color:#E56869;
 	}
 	.header .inner ul.navigation li a.active {
 		-webkit-border-radius: 5px; 
@@ -231,8 +240,13 @@
 	/*homepage specific
 	----------------------------*/
 	
-	.column_homepage-1,.column_homepage-2 {
-	  width:47%;
+	.column_homepage-1 {
+	  width:30%;
+	  margin-right:6%; 
+	  float:left;
+	}
+	.column_homepage-2 {
+	  width:50%;
 	  margin-right:6%; 
 	  float:left;
 	}
@@ -253,12 +267,13 @@
 	}
 	#app-button-container a#button-tweet {
 		width:205px; 
-		height:73px;
+		height:50px;
 		background: url(../images/button-tweet.png) 0 0 no-repeat;
 		float:left;
+		background-size: 70%;
 	}
 	#app-button-container a#button-tweet:hover { 
-		background-position:0 -72px;
+		background-position:0 -50px;
 	}
 	#app-button-container a#button-appstore:active,#app-button-container a#button-tweet:active {
 		position:relative;
@@ -267,7 +282,7 @@
 		
 		
 	.app-price{
-	  font:30px/30px 'Open Sans', sans-serif; 
+	  font: 30px/30px "ff-basic-gothic-web-pro", sans-serif; 
 	  font-weight:bold; 
 	  margin-bottom:30px; 
 	  width:100%;
@@ -297,7 +312,7 @@
 	  background:url(../images/page-down.png) no-repeat;
 	  left:50%;margin-left:-32px;
 	  position:absolute;
-	  bottom:15px;
+	  bottom:22px;
 	}	
 
 	
@@ -315,7 +330,7 @@
 	  padding-top:11px;
 	}
 	.app-button:hover {
-	  color:#fc7022 !important;
+	  color:#E56869 !important;
 	}
 	.app-button span {
 	  font-weight:normal;
@@ -1194,11 +1209,11 @@
 	----------------------------*/	
 	#footer{position:relative; overflow:hidden; padding:50px 0; z-index:1;}
 	#footer .content{max-width:870px;margin:auto;text-align:center;display: table;white-space:nowrap;}
-	#footer .content .logo{margin-bottom:8px;}
+	#footer .content .logo{margin-top:30px;}
 	#footer p.copyright{margin-bottom:20px;}
 	#footer #social-share{width:200px;text-align:center;padding-left:40px;}
 	#footer #social-share .twitter-share-button{width:100px !important;}
-	#footer .contact p { float: left; margin-right: 3em; color: #777;}
+	#footer .contact p { float: center; color: #777;}
 	#footer .contact a { color: #FC7022;}
 	#footer .rss {
     margin-top: 1.1em;
@@ -1207,6 +1222,22 @@
   }
 	#footer .rss img {
     border: 0;
+  }
+  #footer .inner {
+  max-width: 870px;
+  margin: auto;
+  }
+  #footer .content ul {
+  float: left;
+  padding: 0 5px;
+  margin: 0px 0px 16px 0px;
+  }
+  #footer .content ul.navigation li {
+  float: left;
+  margin: 0px 0px 16px 0px;
+  }
+  #footer .content ul.navigation li a:hover {
+  color: #fff;
   }
 
   /*odd*/
@@ -1413,7 +1444,7 @@
 	  text-decoration:none;
 	}
 	a:hover{
-	  color:#fc7022;
+	  color:#222;
 	}
 	p {
 	  margin-bottom:30px; 
@@ -1591,7 +1622,7 @@
 		
 	/*focus title*/
 	.focus-title, .focus-title span { 
-	  color:#fc7022 !important;
+	  color:#b51219 !important;
 	}
 		
 		
@@ -1614,6 +1645,15 @@
 	}
 	.last { 
 	  margin:0 !important;
+	}
+	.txt-left {
+	  text-align: left;
+	}
+	.txt-right {
+	  text-align: right;
+	}
+	.center {
+	  text-align: center;
 	}
 	
 	
@@ -1638,6 +1678,7 @@
  }
  .company{
    font-style: italic;
+   text-align: center;
  }
  
  .circular {
@@ -1653,6 +1694,71 @@
  .circular img {
  	opacity: 0;
  	filter: alpha(opacity=0);
- 	} 
+ 	}
+ 	
+ 	.pd-5  { padding: 5px}
+ 	.pd-10 { padding: 10px}
+ 	.pd-15 { padding: 15px}
+ 	.pd-20 { padding: 20px}
+ 	.pd-25 { padding: 25px}
+ 	.pd-30 { padding: 30px}
+ 	.pd-35 { padding: 35px}
+ 	.pd-40 { padding: 40px}
+ 	.pd-45 { padding: 45px}
+ 	.pd-50 { padding: 50px}
+ 	.pd-55 { padding: 55px}
+ 	.pd-60 { padding: 60px}
+ 	.pd-65 { padding: 65px} 
+ 	.pd-70 { padding: 70px}
+ 	.pd-75 { padding: 75px}
+ 	.pd-80 { padding: 80px}
+ 	.pd-85 { padding: 85px}
+ 	.pd-90 { padding: 90px}
+ 	.pd-95 { padding: 95px}
+ 	.pd-100{ padding: 100px}
+ 	
+ 	.pd-5-r  { padding-right: 5px}
+ 	.pd-10-r { padding-right: 10px}
+ 	.pd-15-r { padding-right: 15px}
+ 	.pd-20-r { padding-right: 20px}
+ 	.pd-25-r { padding-right: 25px}
+ 	.pd-30-r { padding-right: 30px}
+ 	.pd-35-r { padding-right: 35px}
+ 	.pd-40-r { padding-right: 40px}
+ 	.pd-45-r { padding-right: 45px}
+ 	.pd-50-r { padding-right: 50px}
+ 	.pd-55-r { padding-right: 55px}
+ 	.pd-60-r { padding-right: 60px}
+ 	.pd-65-r { padding-right: 65px} 
+ 	.pd-70-r { padding-right: 70px}
+ 	.pd-75-r { padding-right: 75px}
+ 	.pd-80-r { padding-right: 80px}
+ 	.pd-85-r { padding-right: 85px}
+ 	.pd-90-r { padding-right: 90px}
+ 	.pd-95-r { padding-right: 95px}
+ 	.pd-100-r{ padding-right: 100px}
+ 	
+ 	.pd-5-l  { padding-left: 5px}
+ 	.pd-10-l { padding-left: 10px}
+ 	.pd-15-l { padding-left: 15px}
+ 	.pd-20-l { padding-left: 20px}
+ 	.pd-25-l { padding-left: 25px}
+ 	.pd-30-l { padding-left: 30px}
+ 	.pd-35-l { padding-left: 35px}
+ 	.pd-40-l { padding-left: 40px}
+ 	.pd-45-l { padding-left: 45px}
+ 	.pd-50-l { padding-left: 50px}
+ 	.pd-55-l { padding-left: 55px}
+ 	.pd-60-l { padding-left: 60px}
+ 	.pd-65-l { padding-left: 65px} 
+ 	.pd-70-l { padding-left: 70px}
+ 	.pd-75-l { padding-left: 75px}
+ 	.pd-80-l { padding-left: 80px}
+ 	.pd-85-l { padding-left: 85px}
+ 	.pd-90-l { padding-left: 90px}
+ 	.pd-95-l { padding-left: 95px}
+ 	.pd-100-l{ padding-left: 100px}
+ 	
+ 	
  
 				
