updated the relative path

--- a/_includes/header_posts.html
+++ b/_includes/header_posts.html
@@ -84,7 +84,7 @@
 
               <!--navigation-->
               <ul class="navigation">
-                <li><a class="navigateTo" href="/">Welcome</a></li>
+                <li><a class="navigateTo" href="{{ site.baseurl}}/#homepage">Welcome</a></li>
                 <li><a class="navigateTo" href="{{ site.baseurl}}/#features-1">List of Meetups</a></li>
                 <li><a class="navigateTo" href="{{ site.baseurl}}/#features-2">Mentors</a></li>
                 <li><a class="navigateTo" href="{{ site.baseurl}}/#signup">Sign Up</a></li>
