--- a/_includes/header.html
+++ b/_includes/header.html
@@ -105,8 +105,8 @@
                 <li><a class="navigateTo" href="#signup">Sign Up</a></li>
               	
               	{% capture location %}{{ page.url | remove_first:'/' | split:'/' | first }}{% endcapture %}
-              	<li><a {% if location == 'blog' %}class="active" {% endif %}href="/blog/">Blog</a></li>
-              	<li><a {% if location == 'contact' %}class="active" {% endif %}href="/contact/">Contact</a></li>
+              	<li><a {% if location == 'blog' %}class="active" {% endif %}href="{{ site.baseurl}}/blog/">Blog</a></li>
+              	<li><a {% if location == 'contact' %}class="active" {% endif %}href="{{ site.baseurl}}/contact/">Contact</a></li>
               </ul> <!-- end navigation  -->
       		  </div> <!-- end inner  -->
           </div> <!-- end header header-main clearfix -->
